<resources>
    <string name="app_name">Comercias.pe</string>
    <string name="noDatos">No hay Datos</string>
    <string name="buscar">Buscar</string>
    <string name="qr">scan</string>
    <string name="login">login</string>
    <string name="iniciarSesion">Iniciar</string>
    <string name="mensajes">Mensajes</string>
    <string name="carrito">Carrito</string>
    <string name="cuenta">Mi Cuenta</string>
    <string name="deseos">Deseos</string>
    <string name="inicio">Inicio</string>
    <string name="dialogo_habilitar_wifi_titulo">Sin Conexion a Internet</string>
    <string name="dialogo_habilitar_wifi_mensaje">¿Quieres habilitar el Wifi?</string>
    <string name="dialogo_ok">OK</string>
    <string name="dialogo_cancelar">Cancelar</string>
    <string name="no_conexion">¡Sin Conexión!</string>
    <string name="habilitar_red">Habilitar Red</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fa_bolt">&#xf0e7;</string>
    <string name="fa_female">&#xf182;</string>
    <string name="fa_phone">&#xf095;</string>
    <string name="fa_male">&#xf183;</string>
    <string name="fa_diamond">&#xf3a5;</string>
    <string name="fa_home">&#xf015;</string>
    <string name="fa_shopping_bag">&#xf290;</string>
    <string name="fa_child">&#xf1ae;</string>
    <string name="fa_soccer_ball_o">&#xf1e3;</string>
    <string name="fa_automobile">&#xf1b9;</string>
    <string name="fa_cog">&#xf013;</string>
    <string name="fa_mouse_pointer">&#xf245;</string>
    <string name="fa_heart">&#xf004;</string>
    <string name="login_txt">Cuenta de Ingreso</string>
    <string name="login_entrar">Entrar</string>
    <string name="login_registro">Registrarse</string>
    <string name="email">Correo Electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_face">Iniciar con Facebook</string>
    <string name="iniciar_google">Iniciar con Google</string>
    <string name="olvidarContra">¿Olvidaste tu Contraseña?</string>
    <string name="loginAct_txt">Ó Ingresa Con</string>
    <string name="o_txt"> ó </string>
    <string name="crear_cuenta">Crea tu Cuenta</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="numero_contacto">Numero de Contacto</string>
    <string name="crear">Crear Cuenta</string>
    <string name="estoy_deAcuerdo">Estoy de Acuerdo</string>
    <string name="error_invalid_password">Esta contraseña es muy corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es necesario</string>
    <string name="error_invalid_email">El correo debe contener @</string>
    <string name="opcion_categorias">Categorias</string>
    <string name="opcion_ofertas">Ofertas</string>
    <string name="opcion_envios">Envios</string>
    <string name="opcion_sorteos">Sorteos</string>
    <string name="opcion_juegos">Juegos</string>
    <string name="tendencias">Tendencias</string>
    <string name="nuevosPRod">Productos Nuevos</string>
    <string name="facebook_app_id">377937079595895</string>
    <string name="fb_login_protocol_scheme">fb377937079595895</string>
    <string name="fa_shopping_cart">&#xf07a;</string>
    <string name="fa_rocket">&#xf135;</string>
    <string name="fa_heart_o">&#xf08a;</string>
    <string name="fa_tags">&#xf02c;</string>
    <string name="miCuenta">Mi Cuenta</string>
    <string name="ordenes">Órdenes</string>
    <string name="disputas">Disputas</string>
    <string name="cupones">Cupones</string>
    <string name="pedidos">Pedidos</string>
    <string name="pendientePago">Pendiente de pago</string>
    <string name="pendienteEnvio">Pendiente de envío</string>
    <string name="PedidosEnviados">Pedidos enviados</string>
    <string name="pendienteValoracion">Pendiente de valoración</string>
    <string name="historialComprar">Historial de compras</string>
    <string name="pedidoDisputa">Pedidos con disputa</string>
    <string name="ajustes">Ajustes</string>
    <string name="perfil">Mi Perfil</string>
    <string name="sugerencias">Sugerencias</string>
    <string name="ayuda">Centro de ayuda</string>
    <string name="title_activity_producto">ProductoActivity</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="iniciarSesion2">Iniciar Sesión</string>
    <string name="disponibilidad">Disponibilidad: </string>
    <string name="soles">S/. </string>
    <string name="envio">Envio: </string>
    <string name="enviarA">Enviar pedido a: </string>
    <string name="fecha_estimada">Fecha Estimada: </string>
    <string name="costo">Costo: </string>
    <string name="empresa">Empresa: </string>
    <string name="mas"> + </string>
    <string name="menos"> - </string>
    <string name="descripcion">Descripción</string>
    <string name="comprar">Comprar</string>
    <string name="anadir_carrito">Añadir a Carrito</string>
    <string name="anadir">AÑADIR</string>
    <string name="especificaciones">Especificaciones del Vendedor</string>
    <string name="detallesVendedor">Distribuido y Vendido por: </string>
    <string name="action_settings">Settings</string>
    <string name="no_productos">No hay Productos en el Carrito</string>
    <string name="title_activity_confirmar_pedido">ConfirmarPedido</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="confirmarPedido">Los precios que aparecen en esta página pueden variar de lo que
    has visto anteriormente. Esto se debe a que el precio final varia en función de la dirección de envío y
    las especificaciones que aparecen abajo</string>
    <string name="metodoPago">Seleccionar Método de Pago</string>
    <string name="pagarAhora">PAGAR AHORA</string>
    <string name="resumenPedido">Resumen del Pedido</string>
    <string name="subtotalPagarPedido">Subtotal:</string>
    <string name="cuponPagarPedido">Cupón:</string>
    <string name="totalPagarPedido">Total a Pagar</string>
    <string name="aceptarTerminos">Al hacer click en \"PAGAR AHORA\", confirmo haber leído y aceptado los términos y condiciones</string>
    <string name="n_tarjeta">Nº de tarjeta</string>
    <string name="codigoTarjeta">Código de seguridad</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="mm">MM</string>
    <string name="aa">AA</string>
    <string name="guardar">GUARDAR</string>
    <string name="nombApell">Nombres y Apellidos</string>
    <string name="celular">Celular</string>
    <string name="direccion">Dirección</string>
    <string name="direcc2">Referencia</string>
    <string name="depto">Depto./Int (Opcional)</string>
    <string name="ubarnizacion">Urbanización (Opcional)</string>
    <string name="referencia">Referencia (Opcional)</string>
    <string name="codPostal">Código Postal</string>
    <string name="departamento">Departamento</string>
    <string name="provincia">Provincia</string>
    <string name="distrito">Distrito</string>
    <string name="addDirecc">Agregar Dirección</string>
    <string name="tipoDirecc">Tipo de Dirección</string>
    <string name="editarDirecc">Editar Dirección</string>
    <string name="err_msg_name">Ingresa tus Datos</string>
    <string name="err_msg_email">Ingresa un Email valido</string>
    <string name="err_msg_password">Ingresa la contraseña</string>
    <string name="Miscupones">Mis Cupones</string>
    <string-array name="cuponesTipo">
        <item>NUEVOS</item>
        <item>UTILIZADOS</item>
        <item>CADUCADO</item>
        <item>TODOS</item>
    </string-array>
    <string name="MiPerfil">Mi Perfil</string>
    <string name="dirEnvio">Mis Direcciones de Envío</string>
    <string name="misTarjetas">Mis Tarjetas</string>
    <string name="addTarjeta">Agregar Tarjeta</string>
    <string name="editar">Editar</string>
    <string name="pedidosEnviados">Pedidos Enviados</string>
    <string name="nroPedido">Nº Pedido: \u0020</string>
    <string name="fechPedido">Fecha Pedido: \u0020</string>
    <string name="noPedidos">No Tienes Pedidos Enviados</string>
    <string name="seguimiento">Seguimiento</string>
    <string name="confirmarPedidoRe">Confirmar Pedido Recibido</string>
    <string name="montoTotal">Monto Total:</string>
    <string name="cantidad">Cantidad:</string>
    <string name="pendValoracion">Pendientes de Valoración</string>
    <string name="valorarAhora">Valorar Ahora</string>
    <string name="valorarPreg1">¿Estás satisfecho con el producto adquirido?</string>
    <string name="pendPago">Pendientes de Pago</string>
    <string name="pendEnvio">Pendientes de Envío</string>
    <string name="direccAgregada">Tu dirección ha sido agregada correctamente</string>
    <string name="direccNoAgregada">Nose ha podido agregar tu dirección</string>
    <string-array name="departamentosLista">
        <item>Amazonas</item>
        <item>Ancash</item>
        <item>Apurimac</item>
        <item>Arequipa</item>
        <item>Ayacucho</item>
        <item>Cajamarca</item>
        <item>Cusco</item>
        <item>Huancavelica</item>
        <item>Huanuco</item>
        <item>Ica</item>
        <item>Junin</item>
        <item>La Libertad</item>
        <item>Lambayeque</item>
        <item>Lima</item>
        <item>Loreto</item>
        <item>Madre De Dios</item>
        <item>Moquegua</item>
        <item>Pasco</item>
        <item>Piura</item>
        <item>Puno</item>
        <item>San Martin</item>
        <item>Tacna</item>
        <item>Tumbes</item>
        <item>Ucayali</item>


    </string-array>
    <string-array name="provAmazonas">
        <item>Chachapoyas</item>
        <item>Bagua</item>
        <item>Bongará</item>
        <item>Condorcanqui</item>
        <item>Luya</item>
        <item>Rodríguez de Mendoza</item>
        <item>Utcubamba</item>
    </string-array>
    <string-array name="provAncash">
        <item>Huaraz</item>
        <item>Aija</item>
        <item>Antonio Raymondi</item>
        <item>Asunción</item>
        <item>Bolognesi</item>
        <item>Carhuaz</item>
        <item>Carlos Fermín Fitzcarrald</item>
        <item>Casma</item>
        <item>Corongo</item>
        <item>Huari</item>
        <item>Huarmey</item>
        <item>Huaylas</item>
        <item>Mariscal Luzuriaga</item>
        <item>Ocros</item>
        <item>Pallasca</item>
        <item>Pomabamba</item>
        <item>Recuay</item>
        <item>Papá</item>
        <item>Sihuas</item>
        <item>Yungay</item>
    </string-array>
    <string-array name="provApurimac">
        <item>Abancay</item>
        <item>Andahuaylas</item>
        <item>Antabamba</item>
        <item>Aymaraes</item>
        <item>Cotabambas</item>
        <item>Chincheros</item>
        <item>Grau</item>
    </string-array>
    <string-array name="provArequipa">
        <item>Arequipa</item>
        <item>Camaná</item>
        <item>Caravelí</item>
        <item>Castilla</item>
        <item>Caylloma</item>
        <item>Condesuyos</item>
        <item>Islay</item>
        <item>La Unión</item>
    </string-array>
    <string-array name="provAyacucho">
        <item>Huamanga</item>
        <item>Cangallo</item>
        <item>Huanca Sancos</item>
        <item>Huanta</item>
        <item>La Mar</item>
        <item>Lucanas</item>
        <item>Parinacochas</item>
        <item>Páucar del Sara Sara</item>
        <item>Sucre</item>
        <item>Víctor Fajardo</item>
        <item>Vilcas Huamán</item>
    </string-array>
</resources>