<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:layout_marginTop="10dp">
    <LinearLayout
        style="@style/layout_opciones">
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_categorias"
            style="@style/btn_opciones"
            android:src="@drawable/categorias"
            android:background="@android:color/transparent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion_categorias"
            android:textSize="11sp"
            android:lines="2"/>
    </LinearLayout>
    <LinearLayout
        style="@style/layout_opciones">
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_ofertas"
            style="@style/btn_opciones"
            android:background="@drawable/ofertas"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion_ofertas"
            android:textSize="11sp"
            android:lines="2"/>
    </LinearLayout>
    <LinearLayout
        style="@style/layout_opciones">
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_envios"
            style="@style/btn_opciones"
            android:background="@drawable/envios"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion_envios"
            android:textSize="11sp"
            android:lines="2"/>
    </LinearLayout>
    <LinearLayout
        style="@style/layout_opciones">
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_sorteos"
            style="@style/btn_opciones"
            android:background="@drawable/sorteos"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion_sorteos"
            android:textSize="11sp"
            android:lines="2"/>
    </LinearLayout>
    <LinearLayout
        style="@style/layout_opciones">
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_juegos"
            style="@style/btn_opciones"
            android:background="@drawable/juegos"/>
        <TextView
            android:id="@+id/txt_iniopciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion_juegos"
            android:textSize="11sp"
            android:lines="2"/>
    </LinearLayout>

</LinearLayout>